5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4131/executions/1800_2567.log
== TEST (2019-06-11 11:13:32) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print(x*"*")

-- OUTPUT:
********
********
********
********
********
********
********
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:13:49) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print(x - i*"*")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(x - i*"*")
TypeError: unsupported operand type(s) for -: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:14:03) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")

-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:14:28) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
	print((i - x)*"*")

-- OUTPUT:
********

*******

******

*****

****

***

**

*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:14:47) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
	

-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:17:56) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
for i in range(x):
	print(i*"*")
	

-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:18:35) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
for i in range(x):
	print(1*i*"*")
	

-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:18:47) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
for i in range(x):
	print(2*i*"*")
	

-- OUTPUT:
********
*******
******
*****
****
***
**
*

**
****
******
********
**********
************
**************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:19:38) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
for i in range(x):
	print(i*"*")
	

-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:19:54) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
for i in range(x):
	print(x - i*"*")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(x - i*"*")
TypeError: unsupported operand type(s) for -: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:19:58) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
for i in range(x):
	print(x - i*"*")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(x - i*"*")
TypeError: unsupported operand type(s) for -: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:20:23) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
for i in range(x):
	print(i*"*")
	

-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:21:15) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
for i in range(1,size(x)):
	print(i*"*")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    for i in range(1,size(x)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:21:44) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
for i in range(x):
	print(i*"*")
	

-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:21:51) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
for i in range(x):
	print(i*"*")
	

-- EXECUTION TIME:
0.713692
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:21:54) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
for i in range(x):
	print(i*"*")
	

-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:22:52) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
for i in range(x):
	print((i- x)*"*")
	

-- OUTPUT:
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:23:35) 
-- CODE:
x = int(input("x:"))

for i in range(x):
	print((x - i)*"*")
for i in range(x):
	print(i*"*")
	
	

-- OUTPUT:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:45:16) 
-- CODE:
num = int(input("numero:"))
for i in range(num):
	print((num-i)*'*')
	
for i in range(num):
	print((i+1)*'*')
	

-- EXECUTION TIME:
0.535797
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
